Fix an error where nav menu bar is under the footer and at customScrollBar.tsx where the calculation of numBoxes can be Infinity.

--- a/styles/components/navi.css
+++ b/styles/components/navi.css
@@ -92,7 +92,7 @@
     }
 
     .navi_name_short {
-        display: contents;
+        display: block;
     }
 }
 
@@ -220,6 +220,7 @@
     backdrop-filter: blur(10px);;
     background-color: var(--background-color-t7);
     overflow: hidden;
+    z-index: 10000;
 }
 
 .navi_menu_wrapper.hide {
