--- a/styles/main.css
+++ b/styles/main.css
@@ -170,7 +170,6 @@ main {
 }
 
 footer {
-    z-index: 10000;
     position: absolute;
     display: flex;
     justify-content: center;
